Corrected mistake in model version label

--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -2700,7 +2700,7 @@
        "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
        "                ('selectkbest',\n",
        "                 SelectKBest(k=10,\n",
-       "                             score_func=<function f_regression at 0x0000027517EAF9D8>)),\n",
+       "                             score_func=<function f_regression at 0x0000023714CEEC18>)),\n",
        "                ('linearregression',\n",
        "                 LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
        "                                  normalize=False))],\n",
@@ -2827,7 +2827,7 @@
        "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
        "                ('selectkbest',\n",
        "                 SelectKBest(k=15,\n",
-       "                             score_func=<function f_regression at 0x0000027517EAF9D8>)),\n",
+       "                             score_func=<function f_regression at 0x0000023714CEEC18>)),\n",
        "                ('linearregression',\n",
        "                 LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
        "                                  normalize=False))],\n",
@@ -3104,7 +3104,7 @@
        "                                                       with_std=True)),\n",
        "                                       ('selectkbest',\n",
        "                                        SelectKBest(k=10,\n",
-       "                                                    score_func=<function f_regression at 0x0000027517EAF9D8>)),\n",
+       "                                                    score_func=<function f_regression at 0x0000023714CEEC18>)),\n",
        "                                       ('linearregression',\n",
        "                                        LinearRegression(copy_X=True,\n",
        "                                                         fit_intercept=True,\n",
@@ -3131,7 +3131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -3140,7 +3140,7 @@
        "(0.6815474122227032, 0.04592579687938033)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3154,7 +3154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -3163,7 +3163,7 @@
        "{'selectkbest__k': 8}"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3176,7 +3176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -3220,7 +3220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3232,7 +3232,7 @@
        "       False, False, False, False, False])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3251,7 +3251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -3268,7 +3268,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3316,7 +3316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3341,7 +3341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3354,7 +3354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3363,7 +3363,7 @@
        "array([0.6877383 , 0.77987845, 0.77753583, 0.62190924, 0.61794573])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3375,7 +3375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3384,7 +3384,7 @@
        "(0.6970015087370294, 0.07117420491358241)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3409,7 +3409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -3440,7 +3440,7 @@
        " 'simpleimputer__strategy': ['mean', 'median']}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3457,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3469,7 +3469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -3509,7 +3509,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3523,7 +3523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -3534,7 +3534,7 @@
        " 'standardscaler': None}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3554,7 +3554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -3563,7 +3563,7 @@
        "array([0.68961442, 0.79593861, 0.77128447, 0.62254707, 0.66142192])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3576,7 +3576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3585,7 +3585,7 @@
        "(0.7081612973109424, 0.06564715369819316)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3603,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -3678,7 +3678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3689,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3698,7 +3698,7 @@
        "(10.499032338015294, 1.6220608976799664)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3711,7 +3711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -3720,7 +3720,7 @@
        "11.793465668669327"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3738,7 +3738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3748,7 +3748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -3757,7 +3757,7 @@
        "(9.659539811066127, 1.3496029127071227)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3770,7 +3770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3779,7 +3779,7 @@
        "9.495505500261919"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3818,7 +3818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3832,7 +3832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3872,7 +3872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3887,7 +3887,7 @@
     "#and the current datetime (`datetime.datetime.now()`) to the `build_datetime` attribute\n",
     "#Let's call this model version '1.0'\n",
     "best_model = rf_grid_cv.best_estimator_\n",
-    "best_model.version = 1.0\n",
+    "best_model.version = '1.0'\n",
     "best_model.pandas_version = pd.__version__\n",
     "best_model.numpy_version = np.__version__\n",
     "best_model.sklearn_version = sklearn_version\n",
@@ -3897,7 +3897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -3906,7 +3906,7 @@
      "text": [
       "A file already exists with this name.\n",
       "\n",
-      "Do you want to overwrite? (Y/N)Y\n",
+      "Do you want to overwrite? (Y/N)y\n",
       "Writing file.  \"../models\\ski_resort_pricing_model.pkl\"\n"
      ]
     }
