Add Summary to 05_modeling

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
        "0.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1**\n",
+    "\n",
+    "After retraining our model on all available data, we can use it to answer the question of ticket price at Big Mountain Resort.\n",
+    "\n",
+    "BMR currently charges \\\\$81.00 per ticket. Based on the resort's current features, our model predicts the ticket price to be \\\\$94.22, an increase of about \\\\$13.\n",
+    "\n",
+    "However, management should be careful to remember that our model does have an expected mean error of \\\\$10.39, so a similar resort in the dataset would likely have a price between \\\\$84 - \\\\$104. \n",
+    "\n",
+    "If BMR decided to raise the price to \\\\$94 as predicted (and the number of visitors remained the same at 350,000 with average 5 tickets per visitor), the total revenue gain would be \\\\$22.75M. BMR's new chair lift has an estimated operating cost of \\\\$1.54M this season, which would be covered by a ticket increase of just \\\\$0.88.\n",
+    "\n",
+    "Applying the model to BMR's proposed changes showed mixed results. If BMR closes one run, there is no predicted change in ticket price, which may be a good way to save some operating costs. Closing a second or third run would decrease revenue, but the fourth or fifth run closed would not decrease it further, keeping the total revenue loss around \\\\$125k (about 75 cents cheaper per ticket). BMR should weigh the savings in operating cost agains this loss in revenue.\n",
+    "\n",
+    "In the second and third scenarios, increasing the vertical drop by adding a run and lift supports an increased ticket price of \\\\$1.99, representing an increased revenue of \\\\$3.47M. Adding snow making does not make a difference to the model. However, in practice, if lack of snow often keeps this new lower-altitude run closed, management should consider the extra investment in order to benefit from the increased demand of the extra run!\n",
+    "\n",
+    "The fourth scenario to increase the length of the longest run (Hellfire) and add snow making does not support any increase in ticket price. Based on the model, it would not be a recommended investment."
    ]
   },
   {
@@ -1419,7 +1433,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A: 2** \n",
+    "\n",
+    "Using this data to predict the relationship of resort feature value and ticket price relies on the assumption that other resorts are priced appropriately to the market. In truth, some of the resorts in the dataset are likely underpriced (like BMR) or overpriced. If possible, further data collection could help solve this problem, including data on operating costs and number of visitors at each resort.\n",
+    "\n",
+    "On the positive side, BMR does seem to rank consistently near the top of all resorts in the most important features identified by our model. Often, resorts with greater value of a feature are outliers (especially total chairs, longest run, and snow making area). This helps support the model's estimate that ticket price should be near the top of resorts as well.\n",
+    "\n",
+    "BMR leadership may be surprised by the large ticket price predicted by the model. BMR is already the most expensive resort in Montana by a large margin. Although the resort's features are more valuable than most other resorts in the country, leadership might want to consider what effect raising prices by a large amount may have in the state market.\n",
+    "\n",
+    "For future testing, leadership should consider the features found to be important to this model listed above, and use the predict_increase function for the model's estimate of price change."
    ]
   }
  ],
